--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="vertical_bar.png">
-    <title>Bookmark Divider</title>
+    <title></title>
   </head>
   <body>
     <p>Just some random page to have a vertical bar divider as a bookmark on my browser.</p>
