--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- 3 Dividers container -->
         <div class="dividers-container fl-center fl-hz">
           <!-- Divider Container + Caption -->
-          <a href="vertical1.html" class="inner-divider-container fl-center fl-vt">
+          <a href="vertical.html" class="inner-divider-container fl-center fl-vt">
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center active">
               <!-- Fixed-size divider wrapper inside of the container -->
