--- a/vertical.html
+++ b/vertical.html
@@ -22,7 +22,7 @@
     Bookmark Divider is what you didn't know you needed but now couldn't live without.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/asty8926/Bookmark-Divider/main/assets/bookmark-divider-logo.png">
 
-    <title>Bookmark Divider | #1 Vertical</title>
+    <title>Bookmark Divider | Vertical</title>
 
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -36,17 +36,10 @@
 
       <!--<kbd class="shortcut">Ctrl/Cmd + D</kbd>-->
 
-      <div class="dividers-grid">
-        <a href="#" class="divider-number-container current">1</a>
-        <a href="vertical2.html" class="divider-number-container">2</a>
-        <a href="vertical3.html" class="divider-number-container">3</a>
-        <a href="vertical4.html" class="divider-number-container">4</a>
-        <a href="vertical5.html" class="divider-number-container">5</a>
-        <a href="vertical6.html" class="divider-number-container">6</a>
-        <a href="vertical7.html" class="divider-number-container">7</a>
-        <a href="vertical8.html" class="divider-number-container">8</a>
-        <a href="vertical9.html" class="divider-number-container">9</a>
-        <a href="vertical10.html" class="divider-number-container">10</a>
+      <div class="fl-center">
+        <a href="" class="add-link add-link-vertical">
+			<img src="vertical_bar.png">
+		</a>
       </div>
 
       <div class="main-container fl-center fl-vt">
@@ -54,7 +47,7 @@
         <!-- 3 Dividers container -->
         <div class="dividers-container fl-center fl-hz">
           <!-- Divider Container + Caption -->
-          <a href="vertical1.html" class="inner-divider-container fl-center fl-vt">
+          <a href="vertical.html" class="inner-divider-container fl-center fl-vt">
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center active">
               <!-- Fixed-size divider wrapper inside of the container -->
