Remove active class

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
           <!-- Divider Container + Caption -->
           <a href="vertical.html" class="inner-divider-container fl-center fl-vt">
             <!-- Fixed-size square displaying the divider -->
-            <div class="divider-container fl-center active">
+            <div class="divider-container fl-center">
               <!-- Fixed-size divider wrapper inside of the container -->
               <div class="divider-wrapper fl-center">
                 <!-- Actual divider as HTML element -->
                 <div class="divider vertical-divider"></div>
               </div>
             </div>
-            <p class="divider-name active">Vertical</p>
+            <p class="divider-name">Vertical</p>
           </a>
 
           <!-- Divider Container + Caption -->
