--- a/vertical.html
+++ b/vertical.html
@@ -60,7 +60,7 @@
           </a>
 
           <!-- Divider Container + Caption -->
-          <div class="inner-divider-container fl-center fl-vt">
+          <div class="inner-divider-container fl-center fl-vt coming-soon">
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
               <!-- Fixed-size divider wrapper inside of the container -->
@@ -73,7 +73,7 @@
           </div>
 
           <!-- Divider Container + Caption -->
-          <div class="inner-divider-container fl-center fl-vt">
+          <div class="inner-divider-container fl-center fl-vt coming-soon">
 
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
