--- a/vertical.html
+++ b/vertical.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+	<base href="..">
     <link rel="shortcut icon" href="dividers/vertical/color=gray,rotation=vertical.png">
 
     <!-- Meta tags for Discord embeds https://neilpatel.com/blog/open-graph-meta-tags/ -->
