--- a/vertical.html
+++ b/vertical.html
@@ -2,7 +2,6 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-	<base href="..">
     <link rel="shortcut icon" href="dividers/vertical/color=gray,rotation=vertical.png">
 
     <!-- Meta tags for Discord embeds https://neilpatel.com/blog/open-graph-meta-tags/ -->
@@ -30,7 +29,7 @@
   <body>
 
     <div id="app-individual" class="fl-center">
-      <a href="/" class="header-container fl-center">
+      <a href=".." class="header-container fl-center">
         <img class="logo" src="assets/logo-svg.svg" alt="Logo">
         <h1 class="site-title title">Bookmark | Divider</h1>
       </a>
