--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-	<base href=".">
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/bookmark-divider-logo.png">
 
@@ -32,7 +31,7 @@
   <body>
     <div id="app" class="fl-center">
 
-      <a href="/" class="header-container fl-center">
+      <a href=".." class="header-container fl-center">
         <img class="logo" src="assets/logo-svg.svg" alt="Logo">
         <h1 class="site-title title">Bookmark | Divider</h1>
       </a>
