--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <div id="app" class="fl-center">
 
-      <a href=".." class="header-container fl-center">
+      <a href="." class="header-container fl-center">
         <img class="logo" src="assets/logo-svg.svg" alt="Logo">
         <h1 class="site-title title">Bookmark | Divider</h1>
       </a>
