Use different image link

--- a/vertical.html
+++ b/vertical.html
@@ -37,8 +37,8 @@
       <!--<kbd class="shortcut">Ctrl/Cmd + D</kbd>-->
 
       <div class="fl-center">
-        <a href="" class="add-link add-link-vertical">
-			<img src="vertical_bar.png">
+        <a href="" class="add-link">
+			<img src="dividers/vertical/color=gray,rotation=vertical.png">
 		</a>
       </div>
 
