--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </a>
 
           <!-- Divider Container + Caption -->
-          <div class="inner-divider-container fl-center fl-vt">
+          <a href="horizontal.html" class="inner-divider-container fl-center fl-vt">
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
               <!-- Fixed-size divider wrapper inside of the container -->
@@ -64,10 +64,10 @@
               </div>
             </div>
             <p class="divider-name">Horizontal</p>
-          </div>
+          </a>
 
           <!-- Divider Container + Caption -->
-          <div class="inner-divider-container fl-center fl-vt">
+          <a href="circle.html" class="inner-divider-container fl-center fl-vt">
 
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
@@ -78,7 +78,7 @@
               </div>
             </div>
             <p class="divider-name">Circle</p>
-          </div>
+          </a>
 
         </div>
       </main>
