--- a/vertical.html
+++ b/vertical.html
@@ -56,11 +56,11 @@
                 <div class="divider vertical-divider"></div>
               </div>
             </div>
-            <p class="divider-name active">Vertical</p>
+            <p class="divider-name">Vertical</p>
           </a>
 
           <!-- Divider Container + Caption -->
-          <div class="inner-divider-container fl-center fl-vt coming-soon">
+          <a href="horizontal.html" class="inner-divider-container fl-center fl-vt">
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
               <!-- Fixed-size divider wrapper inside of the container -->
@@ -70,10 +70,10 @@
               </div>
             </div>
             <p class="divider-name">Horizontal</p>
-          </div>
+          </a>
 
           <!-- Divider Container + Caption -->
-          <div class="inner-divider-container fl-center fl-vt coming-soon">
+          <a href="circle.html" class="inner-divider-container fl-center fl-vt">
 
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
@@ -84,7 +84,7 @@
               </div>
             </div>
             <p class="divider-name">Circle</p>
-          </div>
+          </a>
 
         </div>
       </div>
