Fix favicon link

--- a/circle.html
+++ b/circle.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="dividers/circle/color=gray,rotation=circle.png">
+    <link rel="shortcut icon" href="dividers/circle/color=gray,rotation=round.png">
 
     <!-- Meta tags for Discord embeds https://neilpatel.com/blog/open-graph-meta-tags/ -->
     <!-- OpenGraphs Meta Tags -->
