Move title to psuedo

--- a/vertical.html
+++ b/vertical.html
@@ -47,7 +47,7 @@
         <!-- 3 Dividers container -->
         <div class="dividers-container fl-center fl-hz">
           <!-- Divider Container + Caption -->
-          <a href="vertical.html" class="inner-divider-container fl-center fl-vt">
+          <a href="vertical.html" class="inner-divider-container fl-center fl-vt" id="inner-vertical">
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center active">
               <!-- Fixed-size divider wrapper inside of the container -->
@@ -56,11 +56,10 @@
                 <div class="divider vertical-divider"></div>
               </div>
             </div>
-            <p class="divider-name">Vertical</p>
           </a>
 
           <!-- Divider Container + Caption -->
-          <a href="horizontal.html" class="inner-divider-container fl-center fl-vt">
+          <a href="horizontal.html" class="inner-divider-container fl-center fl-vt" id="inner-horizontal">
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
               <!-- Fixed-size divider wrapper inside of the container -->
@@ -69,11 +68,10 @@
                 <div class="divider horizontal-divider"></div>
               </div>
             </div>
-            <p class="divider-name">Horizontal</p>
           </a>
 
           <!-- Divider Container + Caption -->
-          <a href="circle.html" class="inner-divider-container fl-center fl-vt">
+          <a href="circle.html" class="inner-divider-container fl-center fl-vt" id="inner-circle">
 
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
@@ -83,7 +81,6 @@
                 <div class="divider circle-divider"></div>
               </div>
             </div>
-            <p class="divider-name">Circle</p>
           </a>
 
         </div>
