--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- 3 Dividers container -->
         <div class="dividers-container fl-center fl-hz">
           <!-- Divider Container + Caption -->
-          <a href="vertical.html" class="inner-divider-container fl-center fl-vt">
+          <a href="vertical.html" class="inner-divider-container fl-center fl-vt" id="inner-vertical">
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
               <!-- Fixed-size divider wrapper inside of the container -->
@@ -50,11 +50,10 @@
                 <div class="divider vertical-divider"></div>
               </div>
             </div>
-            <p class="divider-name">Vertical</p>
           </a>
 
           <!-- Divider Container + Caption -->
-          <a href="horizontal.html" class="inner-divider-container fl-center fl-vt">
+          <a href="horizontal.html" class="inner-divider-container fl-center fl-vt" id="inner-horizontal">
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
               <!-- Fixed-size divider wrapper inside of the container -->
@@ -63,11 +62,10 @@
                 <div class="divider horizontal-divider"></div>
               </div>
             </div>
-            <p class="divider-name">Horizontal</p>
           </a>
 
           <!-- Divider Container + Caption -->
-          <a href="circle.html" class="inner-divider-container fl-center fl-vt">
+          <a href="circle.html" class="inner-divider-container fl-center fl-vt" id="inner-circle">
 
             <!-- Fixed-size square displaying the divider -->
             <div class="divider-container fl-center">
@@ -77,9 +75,7 @@
                 <div class="divider circle-divider"></div>
               </div>
             </div>
-            <p class="divider-name">Circle</p>
           </a>
-
         </div>
       </main>
 
